--- a/Desktop/main.html
+++ b/Desktop/main.html
@@ -173,11 +173,32 @@
           margin-top: 30px;
           width: 100%;
         }
-      /*
-        #text, #submit {
 
+        #text{
+          width: 100%;
+          padding: 10px;
+          font-size: 16px;
+          font-family: sans-serif;
         }
-      */
+
+        #submit {
+          margin-top: 10px;
+          width: 100%;
+          background-color: black;
+          color: white;
+          border: none;
+          padding: 10px;
+          text-align: center;
+          font-weight: bold;
+          font-size: 24px;
+          font-family: sans-serif;
+        }
+
+        #submit:hover {
+          background-color: white;
+          color: black;
+          cursor: pointer;
+        }
 
       }
     </style>
@@ -239,9 +260,9 @@
           Subscribe
         </h2>
         <form>
-          <span class="email">Email</span>
-          <input id="text" type="text">
-          <input id="submit" type="submit">
+         <!-- <span class="email">Email</span> -->
+          <input id="text" type="text" placeholder="Email">
+          <button id="submit" type="submit">Submit</button>
         </form>
 
       </div>
