--- a/Desktop/main.html
+++ b/Desktop/main.html
@@ -1,207 +1,7 @@
 <html!>
 
   <head>
-    <style>
-      header {
-        text-align: center;
-        background-color: #DDD;
-        margin: 0;
-        padding: 10px;
-      }
-
-      body {
-        margin: 0;
-      }
-
-      main {
-        margin: 0;
-      }
-
-      main img {
-        width: 100%;
-      }
-
-      a {
-        text-decoration: none;
-      }
-
-      .banner1 {
-        width: 49%;
-        padding-bottom:
-
-      }
-
-      .banner2 {
-        width: 49%;
-      }
-
-      .wrapper {
-        padding-top: 30px;
-        padding-right: 20px;
-        padding-left: 20px;
-        padding-bottom: 20px;
-        display: flex;
-        justify-content: space-between;
-        background-color: #ddd;
-      }
-
-      .category {
-        background-color: black;
-        color: white;
-        text-align: center;
-        font-weight: bold;
-        font-size: 24px;
-        font-family: sans-serif;
-        padding: 10px;
-      }
-
-      .banner1:hover .category,
-      .banner2:hover .category,
-      .banner3:hover .category,
-      .banner4:hover .category,
-      .banner5:hover .category {
-        background-color: white;
-        color: black;
-      }
-
-      .wrapper2 {
-        padding-top: 10px;
-        padding-right: 20px;
-        padding-left: 20px;
-        padding-bottom: 50px;
-        display: flex;
-        justify-content: space-between;
-        background-color: #ddd;
-      }
-
-      .banner3,
-      .banner4,
-      .banner5 {
-        width: 32%;
-      }
-
-      .subscribe {
-        background-color: #F18C8E;
-        padding: 40px;
-      }
-
-      h2,
-      form {
-        text-align: center;
-      }
-
-      .email {
-        margin-right: 15px;
-      }
-
-      .group {
-        padding-top: 10px;
-        padding-right: 20px;
-        padding-left: 20px;
-        padding-bottom: 50px;
-        display: flex;
-        justify-content: space-between;
-        background-color: #ddd;
-      }
-
-      .nav1 {
-        margin-left: 15%;
-        display: grid;
-      }
-
-      .nav2 {
-        display: grid;
-      }
-
-      .contact {
-        margin-right: 15%;
-      }
-
-      .nav1,
-      .nav2,
-      .contact {
-        margin-top: 5%;
-      }
-
-      .lname {
-        height: 150px;
-        width: 150px;
-      }
-
-      .copyright {
-        font-family: sans-serif;
-        font-size: 14px;
-        text-align: center;
-        padding: 10px;
-      }
-
-      @media screen and (max-width: 767px) {
-
-        #main_banner_container {
-          display: block;
-          position: relative;
-          padding-bottom: 100%;
-        }
-
-        #main_banner {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-        }
-
-        .wrapper {
-          flex-direction: column;
-        }
-
-        .banner1 {
-          width: 100%;
-        }
-
-        .banner2 {
-          margin-top: 30px;
-          width: 100%;
-        }
-
-        .wrapper2 {
-          flex-direction: column;
-        }
-
-        .banner3, .banner4, .banner5 {
-          margin-top: 30px;
-          width: 100%;
-        }
-
-        #text{
-          width: 100%;
-          padding: 10px;
-          font-size: 16px;
-          font-family: sans-serif;
-        }
-
-        #submit {
-          margin-top: 10px;
-          width: 100%;
-          background-color: black;
-          color: white;
-          border: none;
-          padding: 10px;
-          text-align: center;
-          font-weight: bold;
-          font-size: 24px;
-          font-family: sans-serif;
-        }
-
-        #submit:hover {
-          background-color: white;
-          color: black;
-          cursor: pointer;
-        }
-
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
@@ -286,7 +86,7 @@
         </div>
         <div class="contact">
 
-          <form action="type">
+          <form id="form" action="type">
 
             <label for="fname">Contact:</label><br>
             <input type="text" class="fname"><br>
